Updated home and ai pages with latest changes

--- a/education.html
+++ b/education.html
@@ -27,7 +27,8 @@
                 <img src="assets/images/logo.png" alt="Samos Logo" class="nav-logo">
                 <h1 class="nav-title">Samos</h1>
             </div>
-            <ul class="nav-links">
+            <button class="menu-toggle" id="menu-toggle">☰</button>
+            <ul class="nav-links" id="nav-links">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="education.html" class="active">Education</a></li>
                 <li><a href="chat.html">Chat</a></li>
@@ -105,6 +106,7 @@
             </div>
         </div>
     </div>
+    <script src="assets/js/global.js"></script>
     <script src="assets/js/education.js"></script>
 </body>
 </html>
