--- a/profile.html
+++ b/profile.html
@@ -27,14 +27,14 @@
                 <img src="assets/images/logo.png" alt="Samos Logo" class="nav-logo">
                 <h1 class="nav-title">Samos</h1>
             </div>
-            <ul class="nav-links">
+            <button class="menu-toggle" id="menu-toggle">☰</button>
+            <ul class="nav-links" id="nav-links">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="education.html">Education</a></li>
                 <li><a href="chat.html">Chat</a></li>
                 <li><a href="finance.html">Finance</a></li>
                 <li><a href="profile.html" class="active">Profile</a></li>
                 <li><a href="ai.html">AI</a></li>
-                <li><button id="theme-toggle" class="theme-btn">🌙</button></li>
                 <li><button id="logout-btn" class="logout-btn">Logout</button></li>
             </ul>
         </nav>
@@ -90,6 +90,7 @@
             </div>
         </div>
     </div>
+    <script src="assets/js/global.js"></script>
     <script src="assets/js/profile.js"></script>
 </body>
 </html>
