--- a/ai.html
+++ b/ai.html
@@ -72,135 +72,137 @@
         .ai-container {
             position: relative;
             z-index: 3;
-            max-width: 900px;
-            margin: 40px auto;
-            padding: 40px;
+            max-width: 1200px; /* Chatni kengroq qilish uchun */
+            margin: 20px auto;
+            padding: 0; /* Ichki paddingni olib tashladik */
             background: rgba(255, 255, 255, 0.95);
             border-radius: 20px;
             box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
             backdrop-filter: blur(15px);
             border: 1px solid rgba(255, 255, 255, 0.2);
-            animation: cardFadeIn 0.8s ease-out;
-        }
-
-        @keyframes cardFadeIn {
-            from { transform: translateY(80px); opacity: 0; }
-            to { transform: translateY(0); opacity: 1; }
-        }
-
-        .ai-header {
-            text-align: center;
-            margin-bottom: 40px;
-        }
-
-        .ai-title {
-            font-size: 40px;
-            color: #007AFF;
-            font-weight: 800;
-            text-shadow: 0 2px 5px rgba(0, 122, 255, 0.3);
-            margin-bottom: 20px;
-            background: linear-gradient(90deg, #007AFF, #00C4B4);
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
-        }
-
-        .ai-subtitle {
-            font-size: 18px;
-            color: #6B7280;
-            line-height: 1.6;
-            max-width: 700px;
-            margin: 0 auto;
-        }
-
-        .ai-form {
             display: flex;
             flex-direction: column;
-            gap: 25px;
-            margin-bottom: 30px;
+            height: calc(100vh - 120px); /* Chatni balandroq qilish */
         }
 
-        .ai-input {
-            width: 100%;
+        .chat-container {
+            flex: 1;
+            overflow-y: auto;
             padding: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            width: 100%; /* .ai-container bilan bir xil kenglik */
+            max-width: 1180px; /* .ai-container (1200px) dan biroz kichikroq */
+            margin: 0 auto; /* Markazlash uchun */
+        }
+
+        .chat-message {
+            max-width: 70%;
+            padding: 15px;
             border-radius: 15px;
-            background: rgba(245, 245, 245, 0.9);
-            font-size: 17px;
+            font-size: 16px;
+            line-height: 1.5;
+            word-wrap: break-word;
+        }
+
+        .user-message {
+            align-self: flex-end; /* User xabarlari o‘ngda */
+            background: #E5F0FF;
             color: #1C2526;
-            resize: vertical;
-            min-height: 120px;
-            box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.05);
-            border: 1px solid rgba(0, 0, 0, 0.1);
-            transition: all 0.4s ease;
+            border: 1px solid #007AFF;
         }
 
-        .ai-input:focus {
+        .ai-message {
+            align-self: flex-start; /* AI xabarlari chapda */
+            background: #007AFF;
+            color: white;
+            border: 1px solid #005BB5;
+        }
+
+        .chat-input-container {
+            display: flex;
+            gap: 10px;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.9);
+            border-top: 1px solid rgba(0, 0, 0, 0.1);
+            border-radius: 0 0 20px 20px;
+        }
+
+        .chat-input {
+            flex: 1;
+            padding: 15px;
+            border-radius: 10px;
+            background: #F5F5F5;
+            font-size: 16px;
+            border: none;
+            transition: all 0.3s ease;
+        }
+
+        .chat-input:focus {
             background: #FFFFFF;
-            box-shadow: 0 0 15px rgba(0, 122, 255, 0.4);
-            border-color: #007AFF;
-            transform: scale(1.01);
+            box-shadow: 0 0 10px rgba(0, 122, 255, 0.3);
+            outline: none;
         }
 
-        .ai-submit {
-            padding: 16px 40px;
+        .chat-submit {
+            padding: 15px 30px;
             background: linear-gradient(135deg, #007AFF, #00C4B4);
             color: white;
-            border-radius: 12px;
-            font-size: 18px;
-            font-weight: 700;
+            border-radius: 10px;
+            font-weight: 600;
             cursor: pointer;
-            transition: all 0.4s ease;
-            box-shadow: 0 6px 20px rgba(0, 122, 255, 0.5);
-            align-self: center;
-            position: relative;
-            overflow: hidden;
+            transition: all 0.3s ease;
+            border: none;
         }
 
-        .ai-submit:disabled {
+        .chat-submit:disabled {
             background: #6B7280;
             cursor: not-allowed;
-            box-shadow: none;
         }
 
-        .ai-submit::before {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 0;
-            height: 0;
-            background: rgba(255, 255, 255, 0.2);
-            border-radius: 50%;
-            transform: translate(-50%, -50%);
-            transition: width 0.6s ease, height 0.6s ease;
+        .chat-submit:hover:not(:disabled) {
+            background: linear-gradient(135deg, #005BB5, #008B8B);
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(0, 122, 255, 0.5);
         }
 
-        .ai-submit:hover:not(:disabled)::before {
-            width: 300px;
-            height: 300px;
+        /* Scrollbar sozlamalari */
+        .chat-container::-webkit-scrollbar {
+            width: 8px;
         }
 
-        .ai-submit:hover:not(:disabled) {
-            transform: translateY(-3px);
-            box-shadow: 0 10px 25px rgba(0, 122, 255, 0.7);
+        .chat-container::-webkit-scrollbar-track {
+            background: rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
         }
 
-        .ai-response {
-            font-size: 18px;
-            color: #1C2526;
-            padding: 25px;
-            background: rgba(0, 122, 255, 0.1);
-            border-radius: 15px;
-            border-left: 5px solid #007AFF;
-            margin-top: 30px;
-            line-height: 1.6;
-            animation: responseFadeIn 0.5s ease-out;
-            white-space: pre-wrap;
+        .chat-container::-webkit-scrollbar-thumb {
+            background: #007AFF;
+            border-radius: 10px;
         }
 
-        @keyframes responseFadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
+        /* Responsive dizayn */
+        @media (max-width: 768px) {
+            .ai-container {
+                margin: 10px;
+                height: calc(100vh - 100px);
+            }
+
+            .chat-message {
+                max-width: 85%;
+                font-size: 14px;
+                padding: 12px;
+            }
+
+            .chat-input {
+                padding: 12px;
+                font-size: 14px;
+            }
+
+            .chat-submit {
+                padding: 12px 20px;
+            }
         }
     </style>
 </head>
@@ -221,7 +223,8 @@
                 <img src="assets/images/logo.png" alt="Samos Logo" class="nav-logo">
                 <h1 class="nav-title">Samos</h1>
             </div>
-            <ul class="nav-links">
+            <button class="menu-toggle" id="menu-toggle">☰</button>
+            <ul class="nav-links" id="nav-links">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="education.html">Education</a></li>
                 <li><a href="chat.html">Chat</a></li>
@@ -232,21 +235,16 @@
             </ul>
         </nav>
         <div class="ai-container">
-            <div class="ai-header">
-                <h2 class="ai-title">SamosAI</h2>
-                <p class="ai-subtitle">
-                    Assalomu alaykum! SamosAI - bu sizning aqlli yordamchingiz. Biz Gemini AI texnologiyasi asosida ishlaymiz va sizga bilim, maslahat, tahlil va ko‘p narsada yordam beramiz. Savollaringizni bering, biz eng yaxshi javoblarni topamiz!
-                </p>
+            <div class="chat-container" id="chat-container">
+                <!-- Chat xabarlari shu yerga qo‘shiladi -->
             </div>
-            <form class="ai-form" id="ai-form">
-                <textarea class="ai-input" id="ai-input" placeholder="Savolingizni shu yerga yozing..." required></textarea>
-                <button type="submit" id="ai-submit" class="ai-submit">Jo‘natish</button>
-            </form>
-            <div class="ai-response" id="ai-response">
-                Javob shu yerda ko‘rinadi...
+            <div class="chat-input-container">
+                <input type="text" class="chat-input" id="chat-input" placeholder="Savolingizni yozing..." required>
+                <button class="chat-submit" id="chat-submit">Jo‘natish</button>
             </div>
         </div>
     </div>
+    <script src="assets/js/global.js"></script>
     <script>
         // Foydalanuvchi tekshiruvi
         let currentUser = localStorage.getItem('currentUser');
@@ -258,25 +256,44 @@
             window.location.href = 'index.html';
         });
 
-        // Gemini API so'rovini boshqarish
-        const apiKey = 'AIzaSyAmd5wCUwkIvQRLASiKNbCdoKHwwP8V0lI'; // Bu yerni o'zingizning Gemini API kalitingiz bilan almashtiring
+        // Gemini API so'rovi
+        const apiKey = 'AIzaSyAmd5wCUwkIvQRLASiKNbCdoKHwwP8V0lI'; // O‘zingizning Gemini API kalitingiz bilan almashtiring
         const apiUrl = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent';
 
-        document.getElementById('ai-form').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const input = document.getElementById('ai-input').value.trim();
-            const responseDiv = document.getElementById('ai-response');
-            const submitBtn = document.getElementById('ai-submit');
+        const chatContainer = document.getElementById('chat-container');
+        const chatInput = document.getElementById('chat-input');
+        const chatSubmit = document.getElementById('chat-submit');
 
-            if (!input) {
-                responseDiv.textContent = 'Iltimos, savol kiriting!';
-                return;
+        // Xabar qo‘shish funksiyasi
+        function addMessage(content, isUser = false) {
+            const messageDiv = document.createElement('div');
+            messageDiv.className = `chat-message ${isUser ? 'user-message' : 'ai-message'}`;
+            messageDiv.textContent = content;
+            chatContainer.appendChild(messageDiv);
+            chatContainer.scrollTop = chatContainer.scrollHeight; // Har doim pastga scroll qilish
+        }
+
+        // Dastlabki xabar
+        addMessage('Salom! Men SamosAI, sizga qanday yordam bera olaman?', false);
+
+        // Submit hodisasi
+        chatSubmit.addEventListener('click', sendMessage);
+        chatInput.addEventListener('keypress', (e) => {
+            if (e.key === 'Enter' && !e.shiftKey) {
+                e.preventDefault();
+                sendMessage();
             }
+        });
 
-            // Tugmani disable qilish va yuklanish holatini ko‘rsatish
-            submitBtn.disabled = true;
-            submitBtn.textContent = 'Yuklanmoqda...';
-            responseDiv.textContent = 'Javob tayyorlanmoqda...';
+        async function sendMessage() {
+            const input = chatInput.value.trim();
+            if (!input) return;
+
+            // Foydalanuvchi xabarini qo‘shish
+            addMessage(input, true);
+            chatInput.value = '';
+            chatSubmit.disabled = true;
+            chatSubmit.textContent = 'Yuklanmoqda...';
 
             try {
                 const response = await fetch(`${apiUrl}?key=${apiKey}`, {
@@ -302,15 +319,14 @@
                     ? data.candidates[0].content.parts[0].text.trim()
                     : 'Javob topilmadi';
 
-                responseDiv.textContent = aiResponse;
+                addMessage(aiResponse, false);
             } catch (error) {
-                responseDiv.textContent = `Xatolik yuz berdi: ${error.message}. API kalitini yoki ulanishni tekshiring.`;
+                addMessage(`Xatolik yuz berdi: ${error.message}. API kalitini yoki ulanishni tekshiring.`, false);
             } finally {
-                // Tugmani qayta faol qilish
-                submitBtn.disabled = false;
-                submitBtn.textContent = 'Jo‘natish';
+                chatSubmit.disabled = false;
+                chatSubmit.textContent = 'Jo‘natish';
             }
-        });
+        }
     </script>
 </body>
 </html>
