--- a/chat.html
+++ b/chat.html
@@ -17,7 +17,8 @@
                 <img src="assets/images/logo.png" alt="Samos Logo" class="nav-logo">
                 <h1 class="nav-title">Samos</h1>
             </div>
-            <ul class="nav-links">
+            <button class="menu-toggle" id="menu-toggle">☰</button>
+            <ul class="nav-links" id="nav-links">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="education.html">Education</a></li>
                 <li><a href="chat.html" class="active">Chat</a></li>
@@ -79,6 +80,7 @@
             </div>
         </div>
     </div>
+    <script src="assets/js/global.js"></script>
     <script src="assets/js/chat.js"></script>
 </body>
 </html>
